# lab_map_example

./: README.md  game_platformer.py  pyproject.toml
assets/map/: forest_map.tmj  forest_map.tmx  forest_tileset.tsx
